[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Life.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/LifeBarProgress.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/LifeBarUnder.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/FastMob.png" type="Texture" id=4]
[ext_resource path="res://FastEnemy.gd" type="Script" id=5]


[sub_resource type="CapsuleShape2D" id=48]
radius = 14.018
height = 2.78835

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=50]
radius = 14.1622
height = 2.35212

[node name="FastEnemy" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 48 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 49 )
animation = "walk"

[node name="Life" type="PanelContainer" parent="."]
margin_left = -119.629
margin_top = 42.1122
margin_right = 120.371
margin_bottom = 86.1122
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Life"]
margin_left = 7.0
margin_top = 7.0
margin_right = 233.0
margin_bottom = 37.0

[node name="HBoxContainer" type="HBoxContainer" parent="Life/VBoxContainer"]
margin_right = 226.0
margin_bottom = 30.0

[node name="hp_label" type="Label" parent="Life/VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 22.0
margin_bottom = 22.0
text = "HP:"

[node name="bar" type="TextureProgress" parent="Life/VBoxContainer/HBoxContainer"]
margin_left = 26.0
margin_right = 226.0
margin_bottom = 30.0
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 50 )
[connection signal="input_event" from="." to="." method="_on_NormalEnemy_input_event"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
